--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <div class="container">
       <div class="profile-card">
          <div class="profile-pic">
-            <img src="images/" alt="user avatar">
+            <img src="images/Me.jpg" alt="user avatar">
          </div>
 
          <div class="profile-details">
