--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
                      seamless shopping experience.</p>
                </div>
             </div>
+            <div class="workbox">
+               <div class="icon">
+                  <img src="images/green.svg" alt="">
+               </div>
+               <div class="desc">
+                  <h3><Apple-Web-Clone></h3>
+                  <p>Developed a 3D product showcase of an Apple iPhone 15 Pro Max using React Three Fiber and GSAP
+                     animations. Integrated smooth transitions and interactions for an engaging user experience.
+                     Implemented precise scroll-based animations and rotation effects to highlight product details. </p>
+               </div>
+            </div>
 
          </div>
       </div>
