--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
          <div class="work">
             <div class="workbox">
                <div class="icon">
-                  <img src="images/music.svg" alt="">
+                  <img src="" alt="">
                </div>
                <div class="desc">
-                  <h3>MyTune Website</h3>
-                  <p>Developed MyTune, a responsive music streaming web app using HTML, CSS, and JavaScript. Features
-                     include playlist creation, an integrated music player, dark mode toggle, and personalized music
-                     recommendations. Integrated external APIs for real-time music data and enhanced functionality.</p>
+                  <h3>Apple-Web-Clone</h3>
+                  <p>Developed a 3D product showcase of an Apple iPhone 15 Pro Max using React Three Fiber and GSAP
+                     animations. Integrated smooth transitions and interactions for an engaging user experience.
+                     Implemented precise scroll-based animations and rotation effects to highlight product details.</p>
                </div>
             </div>
 
@@ -117,10 +117,24 @@
                   <img src="images/green.svg" alt="">
                </div>
                <div class="desc">
-                  <h3><Apple-Web-Clone></h3>
-                  <p>Developed a 3D product showcase of an Apple iPhone 15 Pro Max using React Three Fiber and GSAP
-                     animations. Integrated smooth transitions and interactions for an engaging user experience.
-                     Implemented precise scroll-based animations and rotation effects to highlight product details. </p>
+                  <h3>T-shirt Costumizer</h3>
+                  <p>Developed an interactive T-shirt customization tool using React, Vite, and Tailwind CSS.
+                     Implemented dynamic color selection for different T-shirt parts and image upload features for
+                     personalized designs. Utilized SVG graphics for realistic T-shirt rendering, providing an intuitive
+                     user experience. Enabled users to download their customized T-shirt designs in high-quality
+                     format. </p>
+               </div>
+            </div>
+            <div class="workbox">
+               <div class="icon">
+                  <img src="images/green.svg" alt="">
+               </div>
+               <div class="desc">
+                  <h3>personalized Dashboard</h3>
+                  <p>A customizable personal dashboard built using React, Vite, and Tailwind CSS. Features include
+                     drag-and-drop widgets, API integrations for real-time weather, news (via Currents API), calendar
+                     events, and task management. Includes theme customization and notification support for an
+                     interactive user experience. </p>
                </div>
             </div>
 
