--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
          <div class="work">
             <div class="workbox">
                <div class="icon">
-                  <img src="" alt="">
+                  <img src="/images/apple.svg" alt="">
                </div>
                <div class="desc">
                   <h3>Apple-Web-Clone</h3>
