--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <div class="workbox">
                <div class="icon">
-                  <img src="images/green.svg" alt="">
+                  <img src="images/tshirt-image.png" alt="">
                </div>
                <div class="desc">
                   <h3>T-shirt Costumizer</h3>
@@ -127,7 +127,7 @@
             </div>
             <div class="workbox">
                <div class="icon">
-                  <img src="images/green.svg" alt="">
+                  <img src="images/image.png" alt="">
                </div>
                <div class="desc">
                   <h3>personalized Dashboard</h3>
