--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <div class="container">
       <div class="profile-card">
          <div class="profile-pic">
-            <img src="images/Me.jpg" alt="user avatar">
+            <img src="images/avatar.png" alt="user avatar">
          </div>
 
          <div class="profile-details">
@@ -127,7 +127,7 @@
             </div>
             <div class="workbox">
                <div class="icon">
-                  <img src="images/image.png" alt="">
+                  <img src="images/personalised.png" alt="">
                </div>
                <div class="desc">
                   <h3>personalized Dashboard</h3>
